# glib-proc-macro-test

./: Cargo.toml
src/: lib.rs  main.rs
